--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 
-# Comment to check workflow
+# Comment to check workflow #2
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
