--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/default-2022.dwlt
+UserSettings/Layouts/default-2022.dwlt
